# OffMe

./: .dockerignore  .env.example  .gitignore  DEPLOY_GUIDE.md  DOCKER_ALTERNATIVES.md  DOCKER_ALTERNATIVES_NO_FLY.md  Dockerfile  FREE_DEPLOYMENT_OPTIONS.md  IMPLEMENTATION_PLAN.md  Makefile  PROBLEMS_FIXED.md  PROBLEMS_FOUND.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  fly.toml  railway.toml  skills-lock.json  start-services.sh  vercel.json
OffMe-export/: DistributionSummary.plist  ExportOptions.plist
aws-sam/: AWS_DEPLOYMENT_GUIDE.md  LambdaHandler.scala  deploy.sh  template.yaml
backend-rust/recs-serving/: .dockerignore  Cargo.toml
backend-rust/recs-serving/src/: features.rs  main.rs  metrics.rs  pipeline.rs  ranker.rs
backend-scala/: .dockerignore  FLY_IO_DEPLOYMENT.md  build-api-gateway.sh  build-simple.sh  build.sbt  deploy-flyio.sh
design-system/: README.md
docs/: api-reference.md  architecture.md  auth.md  beta.md  deploy.md  features.md  firebase-android.md  growth.md  launch.md  pwa-ios.md  recommendations.md
frontend-web/: .dockerignore  .env.example  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
infra/: Makefile  cassandra-init.sh  docker-compose.prod.yml  docker-compose.yml
mobile-android/: README.md  settings.gradle.kts
mobile-ios/: ExportOptions.plist  README.md
scripts/: beta-launch-setup.sh  db-init.sh  deploy-backend.sh  deploy-check.sh  deploy-vercel.sh  deploy-wizard.sh  docker-check.sh  domain-setup.sh  firebase-android-setup.sh  generate-app-icon.py  (+18 more)
(+455 files in other folders)
