[package]
name = "offme-recs-serving"
version = "0.1.0"
edition = "2021"
description = "High-performance recommendation model serving (Navi-inspired)"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
ndarray = "0.15"
rand = "0.8"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "recs-server"
path = "src/main.rs"